--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -648,44 +648,46 @@
                 <h2 class="aside-block-title">
                     <img src="../static/img/courses/recomend.svg" alt="иконка">Рекомендованные курсы
                 </h2>
-
-                <a href="#" class="aside-block-item">
-                    <img class="aside-block-img" src="../static/img/courses/5.jpg" alt="курс">
-                    <div class="aside-block-text">
-                        <h3 class="aside-block-item-title">Лучизм</h3>
-                        <p class="aside-block-item-time">4ч. 30м.</p>
-                    </div>
-                </a>
-                <a href="#" class="aside-block-item">
-                    <img class="aside-block-img" src="../static/img/courses/2.jpg" alt="курс">
-                    <div class="aside-block-text">
-                        <h3 class="aside-block-item-title">Абстракционизм</h3>
-                        <p class="aside-block-item-time">3ч. 10м.</p>
-                    </div>
-                </a>
-                <a href="#" class="aside-block-item">
-                    <img class="aside-block-img" src="../static/img/courses/1.jpg" alt="курс">
-                    <div class="aside-block-text">
-                        <h3 class="aside-block-item-title">ПопАрт</h3>
-                        <p class="aside-block-item-time">2ч. 50м.</p>
-                    </div>
-                </a>
-                <a href="#" class="aside-block-item">
-                    <img class="aside-block-img" src="../static/img/courses/suprematism.jpg" alt="курс">
-                    <div class="aside-block-text">
-                        <h3 class="aside-block-item-title">Супрематизм</h3>
-                        <p class="aside-block-item-time">4ч. 50м.</p>
-                    </div>
-                </a>
-                <a href="#" class="aside-block-item">
-                    <img class="aside-block-img" src="../static/img/courses/luchism.jpg" alt="курс">
-                    <div class="aside-block-text">
-                        <h3 class="aside-block-item-title">Лучизм</h3>
-                        <p class="aside-block-item-time">5ч. 10м.</p>
-                    </div>
-                </a>
+                <div class="aside-block-wrap">
 
 
+                    <a href="#" class="aside-block-item">
+                        <img class="aside-block-img" src="../static/img/courses/5.jpg" alt="курс">
+                        <div class="aside-block-text">
+                            <h3 class="aside-block-item-title">Лучизм</h3>
+                            <p class="aside-block-item-time">4ч. 30м.</p>
+                        </div>
+                    </a>
+                    <a href="#" class="aside-block-item">
+                        <img class="aside-block-img" src="../static/img/courses/2.jpg" alt="курс">
+                        <div class="aside-block-text">
+                            <h3 class="aside-block-item-title">Абстракционизм</h3>
+                            <p class="aside-block-item-time">3ч. 10м.</p>
+                        </div>
+                    </a>
+                    <a href="#" class="aside-block-item">
+                        <img class="aside-block-img" src="../static/img/courses/1.jpg" alt="курс">
+                        <div class="aside-block-text">
+                            <h3 class="aside-block-item-title">ПопАрт</h3>
+                            <p class="aside-block-item-time">2ч. 50м.</p>
+                        </div>
+                    </a>
+                    <a href="#" class="aside-block-item">
+                        <img class="aside-block-img" src="../static/img/courses/suprematism.jpg" alt="курс">
+                        <div class="aside-block-text">
+                            <h3 class="aside-block-item-title">Супрематизм</h3>
+                            <p class="aside-block-item-time">4ч. 50м.</p>
+                        </div>
+                    </a>
+                    <a href="#" class="aside-block-item">
+                        <img class="aside-block-img" src="../static/img/courses/luchism.jpg" alt="курс">
+                        <div class="aside-block-text">
+                            <h3 class="aside-block-item-title">Лучизм</h3>
+                            <p class="aside-block-item-time">5ч. 10м.</p>
+                        </div>
+                    </a>
+
+                </div>
 
             </div>
         </div>
