--- a/static/css/catalog.css
+++ b/static/css/catalog.css
@@ -450,7 +450,7 @@ input[type="search"]::-webkit-search-cancel-button {
     }
     .aside-block-item {
         justify-content: center;
-        padding: 0 30px 0 0;
+        padding: 0 20px 0;
     }
     .container-block {
         margin-right: 50px;
@@ -489,9 +489,6 @@ input[type="search"]::-webkit-search-cancel-button {
     .search-form {
         width: 200px;
     }
-    /* .aside {
-        display: none;
-    } */
     .catalog-header-title {
         font-size: 25px;
     }
