--- a/templates/registration.html
+++ b/templates/registration.html
@@ -12,14 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.svg') }}">
-
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/popUp.css') }}">
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
-    </script> -->
+    </script>
 
     <link rel="shortcut icon" href="../static/img/icon.svg">
 
